feat: Sync AI Compare charts v0.1.355 with declarative NeuVector fixes - Update all AI Compare charts from v0.1.348 to v0.1.355 - Replace NeuVector API jobs with declarative YAML security rules - Fix NeuVector CRD schema validation for proper port format - Eliminate post-install timeout and authentication issues - Simplify NeuVector configuration to single boolean toggle - Add packaged chart files for immediate deployment Synced from ai-demos repository with all installation fixes applied.

--- a/charts/ai-compare-opentelemetry/templates/32-deployment-ai-compare.yaml
+++ b/charts/ai-compare-opentelemetry/templates/32-deployment-ai-compare.yaml
@@ -96,7 +96,10 @@ spec:
             - name: TRACE_REQUESTS_ENABLED
               value: "{{ .Values.aiCompare.observability.traceRequests }}"
             # Clean OpenLit configuration (following ravan/llm-experiments pattern)
-            # (COLLECT_GPU_STATS and OLLAMA_ENDPOINT already defined above)
+            - name: COLLECT_GPU_STATS
+              value: "{{ .Values.aiCompare.observability.collectGpuStats }}"
+            - name: OLLAMA_ENDPOINT
+              value: "http://ollama-service:11434"
             # Model configuration for demo
             - name: MODEL_CONFIG
               valueFrom:
