--- a/charts/ai-compare-suse/questions.yaml
+++ b/charts/ai-compare-suse/questions.yaml
@@ -54,7 +54,7 @@ questions:
 - variable: neuvector.enabled
   group: General
   label: "Enable SUSE Security (NeuVector)"
-  description: "Deploy NeuVector DLP sensors for credit card and SSN detection demos. Uses declarative YAML configuration."
+  description: "Deploy NeuVector network security rules and DLP sensors for security demos. Uses declarative YAML configuration."
   type: "boolean"
   default: false
 
