--- a/charts/ai-compare-suse/templates/neuvector/dlp-sensor-crd.yaml
+++ b/charts/ai-compare-suse/templates/neuvector/dlp-sensor-crd.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.neuvector.enabled }}
+{{- if and .Values.neuvector.enabled (.Capabilities.APIVersions.Has "neuvector.com/v1/NvDlpSensor") }}
 apiVersion: neuvector.com/v1
 kind: NvDlpSensor
 metadata:
